non-msrv-tests/tests/ui/empty.stderr
error: empty `derive_where` found
 --> tests/ui/empty.rs:2:3
  |
2 | #[derive_where()]
  |   ^^^^^^^^^^^^^^
