non-msrv-tests/tests/ui/empty.rs
#[derive(derive_where::DeriveWhere)]
#[derive_where()]
struct Test<T>(T);

fn main() {}
